--- a/tablesimple.html
+++ b/tablesimple.html
@@ -5,8 +5,8 @@
     <title>Table simple</title>
 </head>
 <body>
-<table>
-    <tr>
+<table border="1" cellspacing="0" width="500">
+    <tr style="background: bisque">
     <th>Company</th>
     <th>Contact</th>
     <th>Country</th>
@@ -16,7 +16,7 @@
         <td>Maria Anders</td>
         <td>Germany</td>
     </tr>
-    <tr>
+    <tr style="background: bisque">
         <td>Centro comercial Moctezuma</td>
         <td>Francisco Chang</td>
         <td>Mexico</td>
@@ -26,7 +26,7 @@
         <td>Roland Mendel</td>
         <td>Austria</td>
     </tr>
-    <tr>
+    <tr style="background: bisque">
         <td>Island Trading</td>
         <td>Helen Bennett</td>
         <td>UK</td>
@@ -36,7 +36,7 @@
         <td>Yoshi Tannamuri</td>
         <td>Canada</td>
     </tr>
-    <tr>
+    <tr style="background: bisque">
         <td>Magazzini Alimentari Riuniti</td>
         <td>Giovanni Rovelli</td>
         <td>Italy</td>
